k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pokemission
  namespace: pokemission
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/certificate-arn: "arn:aws:acm:<REGION>:<ACCOUNT>:certificate/<CERT-ID>"
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    # alb.ingress.kubernetes.io/wafv2-acl-arn: "arn:aws:wafv2:<REGION>:<ACCOUNT>:regional/webacl/<NAME>/<ID>"
spec:
  tls:
    - hosts:
        - <your-hostname>
  rules:
    - http:
        paths:
          - path: /api/mission
            pathType: Prefix
            backend:
              service:
                name: mission-service
                port:
                  number: 8000
          - path: /api/subscriber
            pathType: Prefix
            backend:
              service:
                name: subscriber-service
                port:
                  number: 8000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
